scribble-assertions/src/test/resources/bad/extensions/assertions/DbCHistorySensititivy.scr
module bad.extensions.assertions.DbCHistorySensititivy;


type <java> "java.lang.Integer" from "rt.jar" as Integer;
type <java> "java.lang.Long" from "rt.jar" as Long;

// History Sensitivity
global protocol Prot(role A, role B, role C)
{
	MSG(x:Integer) from A to B;
	
	MSG(y:Integer) from B to C;
	
	//[z>x]
	MSG(z:Integer) from C to A;  @(z > x);
}